fix shifted Logo when user signed in

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,14 @@ code {
     monospace;
 }
 
+.App {
+  max-width: 1280px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
